--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 }
 
 dependencies {
+    implementation 'org.osmdroid:osmdroid-android:6.1.10'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
