Updated Navigation and fix crash

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"
         tools:ignore="SelectedPhotoAccess" />
 
@@ -47,8 +48,8 @@
         <activity android:name=".activities.SignInVerificationActivity" />
         <activity android:name=".activities.SignUpProfileActivity" />
         <activity android:name=".activities.SignUpVerificationActivity" />
-        <activity android:name=".fragments.NextActivity"/>
-        <activity android:name=".fragments.ClubCreationActivity"/>
+        <activity android:name=".fragments.Clubinfo"/>
+        <activity android:name=".fragments.CreateClub"/>
     </application>
 
 </manifest>
