--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-maps:18.0.0'
+    implementation 'com.google.maps.android:android-maps-utils:2.2.5'
     implementation 'org.osmdroid:osmdroid-android:6.1.10'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
