--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,18 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     implementation 'org.projectlombok:lombok:1.18.24'
 
+    implementation 'org.tensorflow:tensorflow-lite:2.12.0'
+    implementation "androidx.camera:camera-camera2:1.1.0"
+    implementation "androidx.camera:camera-lifecycle:1.1.0"
+    implementation "androidx.camera:camera-view:1.1.0"
+
+
+    implementation('com.squareup.okhttp3:okhttp:4.9.3')// For HTTP requests
+    implementation 'com.squareup.moshi:moshi:1.12.0'   // For JSON parsing
+    implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'  // For Kotlin-specific JSON parsing
+
+
+
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.drawerlayout:drawerlayout:1.2.0'
