--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ android {
 }
 
 dependencies {
+    implementation "androidx.room:room-runtime:2.4.2"
+    annotationProcessor "androidx.room:room-compiler:2.4.2"
     implementation 'com.google.android.gms:play-services-maps:18.0.0'
     implementation 'com.google.maps.android:android-maps-utils:2.2.5'
     implementation 'org.osmdroid:osmdroid-android:6.1.10'
