--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 }
 
 dependencies {
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     implementation "androidx.room:room-runtime:2.4.2" 
