--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,17 @@ android {
 }
 
 dependencies {
+    def camerax_version = "1.2.2"
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation "androidx.camera:camera-video:${camerax_version}"
+    implementation "androidx.camera:camera-view:${camerax_version}"
+    implementation "androidx.camera:camera-extensions:${camerax_version}"
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
-    implementation "androidx.room:room-runtime:2.4.2" 
+    implementation "androidx.room:room-runtime:2.4.2"
     annotationProcessor "androidx.room:room-compiler:2.4.2"
     implementation 'com.google.android.gms:play-services-maps:18.0.0'
     implementation 'com.google.maps.android:android-maps-utils:2.2.5'
